refactor: make forge commands primary for smart contract dev

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           command: npm install
       - run:
           name: Compile contracts
-          command: npm run compile
+          command: npm run compile:hardhat
       - save_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -58,7 +58,7 @@ jobs:
           name: Run tests
           command: |
             circleci tests glob "test/unit/**/*.ts" | circleci tests split --split-by=filesize > /tmp/tests-to-run
-            npm run test $(cat /tmp/tests-to-run)
+            npm run test:hardhat $(cat /tmp/tests-to-run)
       - store_test_results:
             path: test-results
       - store_artifacts:
@@ -67,20 +67,21 @@ jobs:
   test-forge:
     working_directory: ~/repo
     machine:
-      image: ubuntu-1604:202007-01
-    environment:
-      - BASH_ENV: /home/circleci/.bashrc
+      image: ubuntu-2004:202111-02
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Setup env
-          command: echo "export PATH=$PATH:$(pwd)/.circleci" >> $BASH_ENV
+          command: echo "export PATH=$PATH:$(pwd)/.circleci" >> /home/circleci/.bashrc
       - run: 
           name: Install Foundry
-          command: curl -L https://foundry.paradigm.xyz | bash; source $BASH_ENV; foundryup 
+          command: curl -L https://foundry.paradigm.xyz | bash; source /home/circleci/.bashrc; foundryup 
       - run:
           name: Run tests
-          command: source $BASH_ENV; forge test      
+          command: source /home/circleci/.bashrc; npm run test
 
   e2e-test:
     working_directory: ~/repo
@@ -105,18 +106,16 @@ jobs:
 workflows:
   main:
     jobs:
-      # - build
-      
-      - test-forge
-          
-          # requires:
-          #   - build
-      # - lint: 
-      #     requires:
-      #       - build
-      # - test:
-      #     requires:
-      #       - build
-      # - e2e-test:
-      #     requires:
-      #       - build
+      - build
+      - lint: 
+          requires:
+            - build
+      - test-forge:
+          requires:
+            - build          
+      - test:
+          requires:
+            - build
+      - e2e-test:
+          requires:
+            - build
