--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "description": "",
   "files": [],
   "scripts": {
-    "compile": "npx hardhat compile",
+    "compile": "forge build",
+    "compile:hardhat": "npx hardhat compile",
     "coverage": "npx hardhat coverage",
     "console": "npx hardhat console",
     "console:rinkeby": "npx hardhat console --network rinkeby",
     "console:ropsten": "npx hardhat console --network ropsten",
-    "clean": "rm -rf build",
-    "test": "npx hardhat test",
+    "clean": "rm -rf build && rm -rf out",
+    "test": "forge test",
+    "test:hardhat": "npx hardhat test",
     "test:dependencies": "LOGGING=true NO_RESET=true npx hardhat test test/integration/tests/dependencies.ts",
     "test:e2e": "ENABLE_MAINNET_FORKING=true RUN_E2E_TESTS=true npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
