disable mainnet forking via package script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "console:rinkeby": "npx hardhat console --network rinkeby",
     "console:ropsten": "npx hardhat console --network ropsten",
     "clean": "rm -rf build",
-    "test": "npx hardhat test",
+    "test": "ENABLE_MAINNET_FORKING=false npx hardhat test",
     "test:dependencies": "LOGGING=true NO_RESET=true npx hardhat test test/integration/tests/dependencies.ts",
     "test:e2e": "ENABLE_MAINNET_FORKING=true RUN_E2E_TESTS=true npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
