--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,17 +30,17 @@ jobs:
           name: Compile contracts
           command: npm run compile:hardhat
       - save_cache:
-          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+          key: repo-{{ checksum "/home/circleci/project/package-lock.json" }}
           paths:
             - ~/repo
+    
   lint:
-    working_directory: ~/repo
     docker:
       - image: circleci/node:14
     steps:
       - restore_cache:
           keys:
-            - repo-{{ .Environment.CIRCLE_SHA1 }}
+            - repo-{{ checksum "/home/circleci/project/package-lock.json" }}
       - run:
           name: Run linter
           command: npm run lint
@@ -72,7 +72,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - repo-{{ .Environment.CIRCLE_SHA1 }}
+            - repo-{{ checksum "package-lock.json" }}
       - run:
           name: Setup env
           command: echo "export PATH=$PATH:$(pwd)/.circleci" >> /home/circleci/.bashrc
@@ -92,7 +92,7 @@ jobs:
     steps:
       - restore_cache:
           keys:
-            - repo-{{ .Environment.CIRCLE_SHA1 }}
+            - repo-{{ checksum "package-lock.json" }}
       - run:
           name: Run end-to-end tests
           command: |
