--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@uniswap/lib": "^1.1.2",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.0",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "hardhat": "^2.8.3",
