--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "console:rinkeby": "npx hardhat console --network rinkeby",
     "console:ropsten": "npx hardhat console --network ropsten",
     "clean": "rm -rf build && rm -rf out",
-    "test": "forge test",
+    "test": "forge test --no-match-contract IntegrationTest",
+    "test:integration": "forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --fork-block-number $FORK_BLOCK --match-contract UniswapV3OracleIntegrationTest",
     "test:hardhat": "npx hardhat test",
     "test:dependencies": "LOGGING=true NO_RESET=true npx hardhat test test/integration/tests/dependencies.ts",
     "test:e2e": "ENABLE_MAINNET_FORKING=true RUN_E2E_TESTS=true npx hardhat test",
