ci: update CI commands

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "console:ropsten": "npx hardhat console --network ropsten",
     "clean": "rm -rf build && rm -rf out",
     "test": "forge test --no-match-contract IntegrationTest",
-    "test:integration": "forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --fork-block-number $FORK_BLOCK --match-contract UniswapV3OracleIntegrationTest",
+    "test:integration": "forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --fork-block-number 14207980 --match-contract UniswapV3OracleIntegrationTest",
     "test:hardhat": "npx hardhat test",
-    "test:dependencies": "LOGGING=true NO_RESET=true npx hardhat test test/integration/tests/dependencies.ts",
+    "test:hardhat:dependencies": "LOGGING=true NO_RESET=true npx hardhat test test/integration/tests/dependencies.ts",
     "test:e2e": "ENABLE_MAINNET_FORKING=true RUN_E2E_TESTS=true npx hardhat test",
-    "test:gas": "REPORT_GAS=true npx hardhat test",
-    "test:all": "RUN_ALL_TESTS=true npx hardhat test",
+    "test:hardhat:gas": "REPORT_GAS=true npx hardhat test",
+    "test:hardhat:all": "RUN_ALL_TESTS=true npx hardhat test",
     "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
     "lint-all": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "eslint --fix --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
@@ -57,6 +57,7 @@
     "hardhat-contract-sizer": "^2.4.0",
     "hardhat-gas-reporter": "^1.0.7",
     "merkletreejs": "^0.2.27",
+    "openzeppelinv0.7": "npm:@openzeppelin/contracts@^3.4.0",
     "string-template": "^1.0.0"
   },
   "devDependencies": {
