--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devnet": "ENABLE_MAINNET_FORKING=true NO_RESET=true npx hardhat node",
     "console:rinkeby": "npx hardhat console --network rinkeby",
     "console:ropsten": "npx hardhat console --network ropsten",
-    "clean": "rm -rf build && rm -rf out",
+    "clean": "forge clean",
     "test": "forge test --no-match-contract IntegrationTest",
     "test:integration": "forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --fork-block-number 14207980 --match-contract UniswapV3OracleIntegrationTest",
     "test:hardhat": "npx hardhat test",
