feat: add prettier format for solidity

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
     "lint-all": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "eslint --fix --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
+    "lint:solidity": "prettier --config ./contracts/.prettierrc --list-different 'contracts/**/*.sol'",
     "size-contracts": "npx hardhat size-contracts",
     "setup:forge": "curl -L https://foundry.paradigm.xyz | bash && foundryup",
     "deploy:localhost": "npx hardhat run --network localhost scripts/deploy/migrations.ts",
@@ -33,7 +34,9 @@
     "abis": "node scripts/utils/abis.js",
     "calldata": "npx hardhat run scripts/utils/getProposalCalldata.ts",
     "check-proposal": "ENABLE_MAINNET_FORKING=true npx hardhat run scripts/utils/checkProposal.ts",
-    "prettier-format": "prettier --config .prettierrc './**/*.ts' --write",
+    "prettier:solidity": "prettier --config ./contracts/.prettierrc --write 'contracts/**/*.sol'",
+    "prettier:ts": "prettier --config .prettierrc './**/*.ts' --write",
+    "prettier": "npx prettier:soldity && npx prettier:ts",
     "prepare": "husky install"
   },
   "author": "joeysantoro",
@@ -80,6 +83,7 @@
     "mocha-junit-reporter": "^2.0.2",
     "mocha-multi-reporters": "^1.5.1",
     "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solidity-coverage": "^0.7.18",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
