feat: add solhint linting

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "test:e2e": "ENABLE_MAINNET_FORKING=true RUN_E2E_TESTS=true npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
     "test:all": "RUN_ALL_TESTS=true npx hardhat test",
-    "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
+    "lint": "npm run lint:ts && npm run lint:sol",
+    "lint:ts": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
     "lint-all": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "eslint --fix --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
-    "lint:solidity": "prettier --config ./contracts/.prettierrc --list-different 'contracts/**/*.sol'",
+    "lint:sol": "solhint --ignore-path ./.solhintignore \"contracts/**/*.sol\"",
     "size-contracts": "npx hardhat size-contracts",
     "setup:forge": "curl -L https://foundry.paradigm.xyz | bash && foundryup",
     "deploy:localhost": "npx hardhat run --network localhost scripts/deploy/migrations.ts",
@@ -34,7 +35,7 @@
     "abis": "node scripts/utils/abis.js",
     "calldata": "npx hardhat run scripts/utils/getProposalCalldata.ts",
     "check-proposal": "ENABLE_MAINNET_FORKING=true npx hardhat run scripts/utils/checkProposal.ts",
-    "prettier:solidity": "prettier --config ./contracts/.prettierrc --write 'contracts/**/*.sol'",
+    "prettier:sol": "prettier --config ./contracts/.prettierrc --write 'contracts/**/*.sol'",
     "prettier:ts": "prettier --config .prettierrc './**/*.ts' --write",
     "prettier": "npx prettier:soldity && npx prettier:ts",
     "prepare": "husky install"
@@ -84,6 +85,8 @@
     "mocha-multi-reporters": "^1.5.1",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.18",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
