feat: add sol linting to husky commit hook

--- a/package.json
+++ b/package.json
@@ -97,6 +97,10 @@
     "*.{ts,tsx}": [
       "eslint --cache --fix --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
       "prettier --config .prettierrc './**/*.ts' --write"
+    ],
+    "*.{sol}": [
+      "solhint --ignore-path ./.solhintignore \"contracts/**/*.sol\"",
+      "prettier --config ./contracts/.prettierrc --write 'contracts/**/*.sol'"
     ]
   }
 }
