--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ jobs:
           name: Run tests
           command: |
             source /home/circleci/.bashrc
-            npm run clean && npm run compile && npm run test && npm run test:integration
+            npm run clean && npm run compile && npm run test && npm run test:integration:latest
 
   e2e-test:
     working_directory: ~/repo
