--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "forge clean && rm -rf artifacts",
     "test": "forge test --no-match-contract IntegrationTest",
     "test:integration": "forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --fork-block-number `cat ./contracts/test/integration/_block.txt` --match-contract IntegrationTest",
+    "test:integration:latest": "forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --match-contract IntegrationTest",
     "test:hardhat": "npx hardhat test",
     "test:hardhat:dependencies": "LOGGING=true NO_RESET=true npx hardhat test test/integration/tests/dependencies.ts",
     "test:e2e": "ENABLE_MAINNET_FORKING=true RUN_E2E_TESTS=true npx hardhat test",
