--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,9 @@ jobs:
 
   test-forge:
     working_directory: ~/repo
-    machine:
-      image: cimg/base:2022.02
+    docker:
+      - image: cimg/base:2022.02
+    resource_class: xlarge
     steps:
       - checkout
       - restore_cache:
