--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
             - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Setup env
-          command: echo "export PATH=$PATH:$(pwd)/.circleci" >> /home/circleci/.bashrc && export $SHELL="/bin/bash"
+          command: echo "export PATH=$PATH:$(pwd)/.circleci" >> /home/circleci/.bashrc && export SHELL="/bin/bash"
       - run: 
           name: Install Foundry
           command: curl -L https://foundry.paradigm.xyz | bash; source /home/circleci/.bashrc; foundryup 
