--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
           command: echo "export PATH=$PATH:$(pwd)/.circleci" >> /home/circleci/.bashrc
       - run: 
           name: Install Foundry
-          command: curl -L https://foundry.paradigm.xyz | bash; source /home/circleci/.bashrc; SHELL="/bin/bash" foundryup 
+          command: curl -L https://foundry.paradigm.xyz | bash; source /home/circleci/.bashrc; export SHELL="/bin/bash" foundryup 
       - run:
           name: Run tests
           command: |
