--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,10 @@ jobs:
           command: echo "export PATH=$PATH:$(pwd)/.circleci" >> /home/circleci/.bashrc
       - run: 
           name: Install Foundry
-          command: curl -L https://foundry.paradigm.xyz | bash; source /home/circleci/.bashrc; $HOME/.foundry/bin/foundryup 
+          command: curl -L https://foundry.paradigm.xyz | bash; source /home/circleci/.bashrc; $HOME/.foundry/bin/foundryup
+      - run:
+          name: Finish setting up env
+          command: export PATH=$PATH:/home/circleci/.foundry/bin
       - run:
           name: Run tests
           command: |
