feat: add solidity-docgen

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "deploy:fuse": "DEPLOY_FILE=compoundPCVDeposit npx hardhat run --network mainnet scripts/deploy/migrations.ts",
     "deploy:timelock": "DEPLOY_FILE=optimisticTimelockDeploy npx hardhat run --network mainnet scripts/deploy/migrations.ts",
     "deploy:stw": "DEPLOY_FILE=deployStakedTokenWrapper npx hardhat run --network mainnet scripts/deploy/migrations.ts",
+    "docs": "npx solidity-docgen -i ./contracts/ -o ./docs/API --solc-module solc-0.8",
     "abis": "node scripts/utils/abis.js",
     "calldata": "npx hardhat run scripts/utils/getProposalCalldata.ts",
     "check-proposal": "ENABLE_MAINNET_FORKING=true npx hardhat run scripts/utils/checkProposal.ts",
@@ -65,6 +66,8 @@
     "hardhat-contract-sizer": "^2.5.1",
     "hardhat-gas-reporter": "^1.0.8",
     "merkletreejs": "^0.2.31",
+    "solc-0.8": "npm:solc@^0.8.13",
+    "solidity-docgen": "0.5.16",
     "string-template": "^1.0.0"
   },
   "devDependencies": {
