Set theme jekyll-theme-slate

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: Fei Protocol documentation
 description: Developer documentation for the Fei protocol
 social-network-links:
