--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@balancer-labs/v2-pool-weighted": "^2.0.1",
     "@chainlink/contracts": "^0.1.7",
     "@gnosis.pm/safe-core-sdk": "^2.1.0",
+    "@gnosis.pm/safe-deployments": "^1.12.0",
     "@gnosis.pm/safe-ethers-lib": "^1.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.4.2",
