--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "console:rinkeby": "npx hardhat console --network rinkeby",
     "console:ropsten": "npx hardhat console --network ropsten",
     "clean": "forge clean && rm -rf artifacts",
+    "generate:docs": "hardhat docgen",
     "test": "forge test --no-match-contract IntegrationTest",
     "test:integration": "FORK_BLOCK=14322512; forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --fork-block-number $FORK_BLOCK --match-contract IntegrationTest",
     "test:integration:latest": "forge test --fork-url https://eth-mainnet.alchemyapi.io/v2/$MAINNET_ALCHEMY_API_KEY --match-contract IntegrationTest",
@@ -63,8 +64,10 @@
     "dotenv": "^16.0.0",
     "hardhat": "^2.9.2",
     "hardhat-contract-sizer": "^2.5.1",
+    "hardhat-docgen": "^1.3.0",
     "hardhat-gas-reporter": "^1.0.8",
     "merkletreejs": "^0.2.31",
+    "solidity-docgen": "^0.6.0-beta.8",
     "string-template": "^1.0.0"
   },
   "devDependencies": {
