--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@gnosis.pm/safe-deployments": "^1.12.0",
     "@gnosis.pm/safe-ethers-lib": "^1.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/contracts": "^4.6.0-rc.0",
+    "@openzeppelin/contracts": "4.6.0",
     "@openzeppelin/test-environment": "^0.1.7",
     "@openzeppelin/test-helpers": "^0.5.15",
     "@orcaprotocol/contracts": "^5.0.1",
