--- a/foundry.toml
+++ b/foundry.toml
@@ -1,8 +1,9 @@
 [default]
 optimizer = true
-optimizer_runs = 20000
+optimizer_runs = 200
 lib-paths = "node_modules"
 contracts = "contracts"
+solc_version = '0.8.10'
 
 [ci]
 verbosity = 3
